--- a/contact.html
+++ b/contact.html
@@ -277,7 +277,8 @@ img{
                  
 <div style="text-align: center">      
 <div class="container">  
-  <form id="contact" action="thanks.html" method="post">
+  <form id="contact" action="https://formspree.io/adamcoventry96@gmail.com"
+      method="POST">>
     <h6 style="text-align: center" style="color: red">Contact Me</h6>
     <fieldset>
       <input placeholder="First name" type="text" tabindex="1" pattern=[a-zA-Z]+ title="e.g. Joe" required>
