--- a/index.html
+++ b/index.html
@@ -60,6 +60,39 @@
 
     width: 90px;
 }
+
+@media(max-width: 1001px){
+
+    aside#sidebar{
+    float:none;
+    text-align:center;
+    width:100%;
+    padding-top: 10px;
+  }
+        #boxes .box{
+                float: left;
+                display: inline-block;
+                margin: 0 auto 0 auto;
+                text-align: center;
+                width: 15%;
+                padding-right: 5px;
+                padding-left: 60px;
+                padding-top: 60px;
+        }
+
+        #boxes{
+
+    margin-top: 20px;
+}
+
+#boxes .box img{
+
+    width: 90px;
+}
+
+}
+
+        
         }
 
     </style>
