--- a/contact.html
+++ b/contact.html
@@ -287,7 +287,7 @@ img{
       <input placeholder="Last name" type="text" tabindex="1" pattern=[a-zA-Z]+ title="e.g. Bloggs" name="name" required >
     </fieldset>
     <fieldset>
-      <input placeholder="Your Email Address" type="email" tabindex="2" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" name="_replyto" required>
+      <input placeholder="Your Email Address" type="email" tabindex="2" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-z]{2,3}$" name="_replyto" required>
     </fieldset>
        <fieldset>
       <input placeholder="Your Phone Number (optional)" type="number" tabindex="3" name="number"  maxlength="11" > </fieldset>
