chanes to thumbnail1

--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@ figcaption{
 <main>
 <section> 
   <figure>
-  <a href="https://www.youtube.com/watch?v=i66u5CTn2nY" alt="image1" title="Image1"><img src="Images/animation_video.jpg"></a>
+  <a href="https://www.youtube.com/watch?v=K-a-WDmZjUw" alt="image1" title="Image1"><img src="Images/betron.jpg"></a>
   <figcaption> Animation <br />  (click to Play) </figcaption>
   </figure>
 
