Message confirmed page

--- a/services.html
+++ b/services.html
@@ -94,11 +94,11 @@
   						</div>
   						<div>
   							<label>Email</label><br>
-  							<input type="email" placeholder="Email Address" tabindex="2" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
+  							<input type="email" placeholder="Email Address" tabindex="2" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$" required>
   						</div>
   						<div>
-  							<label>Message</label><br>
-  							<textarea placeholder="Message" tabindex="5" required></textarea>
+  							<label>Services Required</label><br>
+  							<textarea placeholder="Details of Services" tabindex="5" required></textarea>
   						</div>
   						<button class="button_1" type="submit">Send</button>
 					</form>
