--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
                 <section id="newsletter">
                     <div class="container">
                     <h1> Subscribe for updates about my services </h1>
-                    <form>
+                    <form action="https://formspree.io/adamcoventry96@gmail.com"
+      method="POST">
                         <input type="email" placeholder="Enter Email...">
                         <button type="submit" class="button_1">Subscribe</button>
                     </form>
