correction to the messge sent pasge

--- a/contact.html
+++ b/contact.html
@@ -299,7 +299,9 @@ img{
     <fieldset>
       <button name="submit" type="submit" id="contact-submit" data-submit="Sending">Submit</button>
     </fieldset>
-    
+    <fieldset>
+    <input type="hidden" name="_next" value="//almedia96.github.io/thanks.html" />
+    </fieldset>
   </form>
 </div>
 </div>   
