forms up to date

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,7 @@
       method="POST">
                         <input type="email" placeholder="Enter Email...">
                         <button type="submit" class="button_1">Subscribe</button>
+                        <input type="hidden" name="_next" value="//almedia96.github.io/subscribe.html" />
                     </form>
                     </div>
                  </section>
