--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,14 @@
                 </nav>     
         </header>     
                   
-                <section id="newsletter">
+                  <section id="newsletter">
                     <div class="container">
                     <h1> Subscribe for updates about my services </h1>
-                    <form>
+                    <form action="https://formspree.io/adamcoventry96@gmail.com"
+      method="POST">
                         <input type="email" placeholder="Enter Email...">
                         <button type="submit" class="button_1">Subscribe</button>
+                        <input type="hidden" name="_next" value="//almedia96.github.io/subscribe.html" />
                     </form>
                     </div>
                  </section>
