added youtube hyperlink

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <div class="container">
                 <article id="main-col">
                     <h1 class="page-title">About Me</h1>
-                    <p> Hello and thank you for stoping by. My name is Adam Lubin, and I am currently undertaking a degree in Multimedia Computing BSc (Hons) at Coventry University. Confident, decisive and ambitious is how I would describe myself when producing a given product. Highly able to adapt myself to new challenges, as well as being a strong participent when it comes to small or large collaborations. At present my interests lie within Video production and visual effects as well as front end web development, with the next goal being to seek employment down these avenues and or to embark on postgraduate study.
+					<p> Hello and thank you for stoping by. My name is Adam Lubin, and I am currently undertaking a degree in Multimedia Computing BSc (Hons) at Coventry University. Confident, decisive and ambitious is how I would describe myself when producing a given product. Highly able to adapt myself to new challenges, as well as being a strong participent when it comes to small or large collaborations. At present my interests lie within Video production and visual effects as well as front end web development, with the next goal being to seek employment down these avenues and or to embark on postgraduate study. <b> Social media can be found on the contact page. <b>
                          </p>
 
 
