--- a/portfolio.html
+++ b/portfolio.html
@@ -214,11 +214,19 @@ figcaption{
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+
+
+a:visited { text-decoration: none; color:#003D86; }
+a:hover { text-decoration: none; color:#003D86; }
+a:focus { text-decoration: none; color:yellow; }
+a:hover, a:active { text-decoration: none; color:red }
+
+
 </style>
 
    
 
-  </style>
+  
 
 <body>
 
@@ -227,7 +235,9 @@ figcaption{
 
     <h4>Videos</h4>
 
+    <h4><a href="https://www.youtube.com/channel/UC-Au5MpjktCO40LJ0Ptt9pQ" style="text-decoration:none" style="color: red">Youtube Channel</a></h4>
 
+    
 <main>
 <section> 
   <figure>
