names to fields

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                     <h1> Subscribe for updates about my services </h1>
                     <form action="https://formspree.io/adamcoventry96@gmail.com"
       method="POST">
-                        <input type="email" placeholder="Enter Email...">
+                        <input type="email" placeholder="Enter Email..." name="_replyto">
                         <button type="submit" class="button_1">Subscribe</button>
                         <input type="hidden" name="_next" value="//almedia96.github.io/subscribe.html" />
                     </form>
@@ -218,7 +218,7 @@ figcaption{
 
 a:visited { text-decoration: none; color:#003D86; }
 a:hover { text-decoration: none; color:#003D86; }
-a:focus { text-decoration: none; color:yellow; }
+a:focus { text-decoration: none; color: #003D86; }
 a:hover, a:active { text-decoration: none; color:red }
 
 
