--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <h1> Subscribe for updates about my services </h1>
                     <form action="https://formspree.io/adamcoventry96@gmail.com"
       method="POST">
-                        <input type="email" placeholder="Enter Email...">
+                        <input type="email" placeholder="Enter Email..." name="_replyto">
                         <button type="submit" class="button_1">Subscribe</button>
                         <input type="hidden" name="_next" value="//almedia96.github.io/subscribe.html" />
                     </form>
