--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
                     <h1> Subscribe for updates about my services </h1>
                     <form action="https://formspree.io/adamcoventry96@gmail.com"
       method="POST">
-                        <input type="email" placeholder="Enter Email...">
+                        <input type="email" placeholder="Enter Email..." name="_replyto">
                         <button type="submit" class="button_1">Subscribe</button>
                         <input type="hidden" name="_next" value="//almedia96.github.io/subscribe.html" />
                     </form>
@@ -93,15 +93,15 @@
       method="POST" class="quote">
   						<div>
   							<label>Name</label><br>
-  							<input type="text" placeholder="Name" tabindex="1" pattern=[a-zA-Z]+ title="e.g. Joe" required>
+  							<input type="text" placeholder="Name" tabindex="1" name="name" pattern=[a-zA-Z]+ title="e.g. Joe" required>
   						</div>
   						<div>
   							<label>Email</label><br>
-  							<input type="email" placeholder="Email Address" tabindex="2" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$" required>
+  							<input type="email" placeholder="Email Address" tabindex="2" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$" name="_replyto" required>
   						</div>
   						<div>
   							<label>Services Required</label><br>
-  							<textarea placeholder="Details of Services" tabindex="5" required></textarea>
+  							<textarea placeholder="Details of Services" tabindex="5" name="comment" required></textarea>
   						</div>
   						<button class="button_1" type="submit">Send</button>
 
