--- a/portfolio.html
+++ b/portfolio.html
@@ -216,10 +216,17 @@ figcaption{
 }
 
 
-a:visited { text-decoration: none; color:#003D86; }
-a:hover { text-decoration: none; color:#003D86; }
+a:visited { text-decoration: none; color:white; }
+a:hover { text-decoration: none; color:#cccccc; }
 a:focus { text-decoration: none; color: #003D86; }
-a:hover, a:active { text-decoration: none; color:red }
+a:hover, a:active { text-decoration: none; color:#cccccc }
+
+h4
+  a:visited { text-decoration: none; color:#003D86; }
+  
+  h4
+   a:hover { text-decoration: none; color:red; }
+
 
 
 </style>
@@ -235,7 +242,7 @@ a:hover, a:active { text-decoration: none; color:red }
 
     <h4>Videos</h4>
 
-    <h4><a href="https://www.youtube.com/channel/UC-Au5MpjktCO40LJ0Ptt9pQ" style="text-decoration:none" style="color: red">Youtube Channel</a></h4>
+    <h4 style="color:#003D86 "><a href="https://www.youtube.com/channel/UC-Au5MpjktCO40LJ0Ptt9pQ" style="text-decoration:none" style=>Youtube Channel</a></h4>
 
     
 <main>
